[package]
name = "nng-c-sys"
version = "1.8.0-beta.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["nng", "nanomsg"]
categories = ["api-bindings"]
description = "Bindings nng C library"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/nng-c-sys"
documentation = "https://docs.rs/crate/nng-c-sys"

[build-dependencies.bindgen]
version = "0.69"
optional = true

[build-dependencies.cmake]
version = "0.1"

[features]
# Used internally to generate lib.rs
build-bindgen = ["bindgen"]
# Enables HTTP transport code
http = []
